[package]
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["data-structures"]
license = "MIT/Apache-2.0"
name = "arc-cache"
repository = "https://github.com/jedisct1/rust-arc-cache"
version = "0.2.1"
categories = ["algorithms", "caching", "memory-management"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-arc-cache" }
appveyor  = { repository = "jedisct1/rust-arc-cache" }

[dependencies.lru-cache]
git = "https://github.com/jedisct1/lru-cache.git"
